plugins {
    id 'java'
    id 'jacoco'
}

group 'code.shubham'
version '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}


jacoco { //Please do not change this
    toolVersion = "0.8.12"
//    reportsDir = file("$buildDir/jacoco")
}

//jacocoTestReport { //Please do not change this
//    reports {
//        xml.enabled true
//        csv.enabled false
//        html.enabled false
//        xml.destination file("./jacoco.xml")
//    }
//}

jar {
//    archiveBaseName = 'object_oriented_design' //Please do not change this final artifact name
//    manifest {
//        attributes 'Main-Class' : '' //Change this to the main class of your program which will be executed
//    }
    // To create a single jar with all dependencies.
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
}

test { ///Please do not change this
    useJUnitPlatform()
    testLogging {
        events "PASSED", "SKIPPED", "FAILED", "STANDARD_ERROR"
    }
    finalizedBy jacocoTestReport // report is always generated after tests run
    afterSuite { desc, result ->
        if (!desc.parent)
            println("${result.resultType} " +
                    "(${result.testCount} tests, " +
                    "${result.successfulTestCount} successes, " +
                    "${result.failedTestCount} failures, " +
                    "${result.skippedTestCount} skipped)")
    }
}


repositories {
    mavenCentral()
}

dependencies {
    implementation(
            'com.google.guava:guava:33.3.1-jre',
            'org.jctools:jctools-core:4.0.1',
            'org.openjdk.jmh:jmh-core:1.37',
            'com.github.f4b6a3:uuid-creator:6.1.0',
            'com.google.code.gson:gson:2.14.0',
    )
    compileOnly (
            'org.projectlombok:lombok:1.18.40'
    )
    annotationProcessor (
            'org.projectlombok:lombok:1.18.40',
            'org.openjdk.jmh:jmh-generator-annprocess:1.37',
    )
    testCompileOnly (
            'org.projectlombok:lombok:1.18.40'
    )
    testAnnotationProcessor (
            'org.projectlombok:lombok:1.18.40'
    )
    testImplementation(
            'junit:junit:4.13.2',
            'org.junit.jupiter:junit-jupiter-api:5.11.4',
            'org.junit.jupiter:junit-jupiter-engine:5.11.4',
            'org.junit.vintage:junit-vintage-engine:5.11.4',
            'org.junit.platform:junit-platform-runner:1.11.4',
            'org.mockito:mockito-core:5.14.2',
            'org.mockito:mockito-junit-jupiter:5.14.2'
    )
}